Parse multiple segments